--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -8,7 +8,7 @@
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin tài liệu</div>
+        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
       </li>
 
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
@@ -17,7 +17,7 @@
       </li>
 
       <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế tài liệu</div>
+        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div>
       </li>
 
       <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
