--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -170,5 +170,10 @@
   </div>
 </div>
 
-<button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+<div class="footer-infor-contract">
+  <div></div>
+  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+  <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+</div>
+
 
