--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
               <span>{{menu.title}}</span>
               <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{menu.badge.text}}</span>
             </a>
-            <span *ngIf="menu.title === 'Tạo mới'" (click)='clickLink(menu)' class="sub_title_add">
+            <span *ngIf="menu.title === 'Tạo mới'" (click)="clickLink(menu, 'create-contract-new')" class="sub_title_add">
               <button class="btn_add_contract">
                 <span class="fa fa-plus icon_add"></span>TẠO MỚI HĐ
               </button>
