--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -1,32 +1,42 @@
-.infor_contact{
+.infor_contact {
   border: 1px solid #0160AE;
   padding: 10px;
   border-radius: 10px;
 }
 
-.determine_contact{
+.determine_contact {
   border: 1px solid #0160AE;
   padding: 10px;
   border-radius: 10px;
 }
 
-.user_contact{
+.user_contact {
   border: 1px solid #0160AE;
   padding: 10px;
   border-radius: 10px;
 }
 
-.partner_contact{
+.partner_contact {
   border: 1px solid #0160AE;
   padding: 10px;
   border-radius: 10px;
   margin-top: 10px;
 }
-.label_item{
+
+.label_item {
   padding: 10px 0px 5px;
   color: #5e5e5e;
 }
-.labelOrg{
+
+.labelOrg {
   padding: 10px 0px 5px;
+  font-weight: 500;
+}
+
+.content_footer {
+  text-align: center;
+  margin: 10px;
+  color: #0160AE;
+  font-size: 13px;
   font-weight: 500;
 }
