--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -440,8 +440,9 @@
   {{this.partners.value | json}}
 </div>
 
-<div>
+<div class="footer-determine" style="display: flex; justify-content: space-between">
   <button (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+  <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
 </div>
 
