--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -100,6 +100,20 @@ button {
   margin: 10px 5px;
 }
 
+.footer-infor-contract {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .content_footer{
+    //text-align: center;
+    //margin: 10px;
+    color:#0160AE;
+    font-size: 13px;
+    font-weight: 500;
+  }
+}
+
+
 
 ::ng-deep .date-picker {
   width: 100%;
