--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -49,11 +49,11 @@
         <div class="location">
           <div class="location-drag">
             <div class="label" style="text-align: center">X:</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="objSignInfo.traf_x" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'x', 'location')" [ngModel]="this.objSignInfo.traf_x" [readOnly]="false">
           </div>
           <div class="location-drag">
             <div class="label" style="text-align: center">Y:</div>
-            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="objSignInfo.traf_y" [readOnly]="false">
+            <input type="number" (ngModelChange)="changePositionSign($event, 'y', 'location')" [ngModel]="this.objSignInfo.traf_y" [readOnly]="false">
           </div>
         </div>
       </div>
@@ -97,8 +97,11 @@
     </div>
   </div>
 </div>
-<div class="footer">
+<div class="footer-sample-contract">
   <button (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
-  <button type="button" name="saveDocument" class="next action-button pull-right">Lưu nháp</button>
-  <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+  <div>
+    <button type="button" name="saveDocument" class="next action-button pull-right">Lưu nháp</button>
+    <button (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
+  </div>
 </div>
