edit code vi tri keo va so luong doi tuong keo tha

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -30,7 +30,7 @@
     <div class="location-change" [ngStyle]="changeDisplay()">
       <div class="sample-contract__information--user-sign">
         <label class="label">THUỘC TÍNH</label>
-        <div class="name-text">
+        <div class="name-text" *ngIf="isEnableText">
           <label class="label-require">Tên trường: *</label>
           <input type="text">
         </div>
