--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -5,5 +5,5 @@
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
 <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
-  <span id="input-text">{{sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'}}</span>
+  <span id="input-text">{{sign.sign_unit == 'text' ? 'Text' : 'Số tài liệu'}}</span>
 </div>
