--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -9,7 +9,7 @@
             <div class="form-group">
               <div class="label_item">Tên file hợp đồng</div>
               <div class="input-group">
-                <input type="text" id="contractFile" class="form-control" formControlName="contractFile" readonly/>
+                <input type="text" id="contractFileName" class="form-control" formControlName="contractFileName" readonly/>
               </div>
             </div>
           </div>
