--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,33 +1,24 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
-<!--  <button *ngIf="step == 'determine-contract'" (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>-->
-<!--  <button *ngIf="step == 'sample-contract'" (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>-->
-<!--  <button *ngIf="step == 'confirm-contract'" (click)="back($event, 'sample-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>-->
-
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
+        <!-- <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div> -->
       </li>
 
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
                      step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div>
+        <!-- <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div> -->
       </li>
 
       <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div>
+        <!-- <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div> -->
       </li>
 
       <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div>
+        <!-- <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div> -->
       </li>
     </ul>
   </div>
-
-<!--  <button *ngIf="step == 'infor-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>-->
-<!--  <button *ngIf="step == 'determine-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>-->
-<!--  <button *ngIf="step == 'sample-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>-->
-<!--  <button *ngIf="step == 'confirm-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>-->
 </div>
