--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -20,6 +20,30 @@
           <input type="text" id="contractName" [(ngModel)]="contractName" class="form-control"/>
         </div>
       </div>
+      <div class="form-group">
+        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractName!=''">
+          {{errorContractName}}
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <div class="label_item">File hợp đồng <span class="require_star">*</span></div>
+        <input id="file-input" type="file" accept=".pdf"
+              (change)="fileChanged($event)" style="display: none;"/>
+        <div class="file-contract" (click)="addFile()">
+          <img src="assets/img/upload_file.svg" alt="mobifone.contract">
+          <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="this.datas.file_name==null">Chọn file hợp đồng (PDF, DOC, DOCX)</span>{{this.datas.file_name}}</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <p class="alert alert-danger error-detail" role="alert" *ngIf="errorContractFile!=''">
+          {{errorContractFile}}
+        </p>
+      </div>
     </div>
   </div>
 
@@ -55,81 +79,6 @@
   <div class="row">
     <div class="col-md-5">
       <div class="form-group">
-        <div class="select-file-contract">
-          <div class="file-approve">
-            <div class="label_item">File hợp đồng <span class="require_star">*</span></div>
-            <input id="file-input" type="file" accept=".pdf"
-                  (change)="fileChanged($event)" style="display: none;"/>
-            <div class="select-contract" (click)="addFile()">
-              <input type="text" placeholder="Chọn file hợp đồng (PDF, DOC, DOCX, PNG, JPG, JPGE)" readonly [ngModel]="this.datas.file_name">
-              <img src="assets/img/attachment.svg" alt="mobifone.contract">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-5">
-      <div class="form-group">
-        <div class="select-file-contract">
-          <div class="file-approve">
-            <div class="label_item">File đính kèm</div>
-            <input id="attachFile" type="file" accept=".pdf, .doc, .docx"
-                  (change)="fileChangedAttach($event)" style="display: none;" multiple/>
-            <div class="select-contract" (click)="addFileAttach()">
-              <input type="text" placeholder="Chọn file đính kèm (PDF, DOC, DOCX)" readonly [ngModel]="this.datas.file_name_attach">
-              <img src="assets/img/attachment.svg" alt="mobifone.contract">
-            </div>
-          </div>
-        </div>
-
-        <!-- <div>
-          <label for="file-upload-attach" class="custom-file-upload">
-            <i class="fa fa-cloud-upload"></i> File PDF, DOC, DOCX
-          </label>
-          <input id="file-upload-attach" type="file" multiple
-                 (change)="selectFilesAttach($event); uploadFilesAttach()"/>
-        </div>
-        <div *ngFor="let progressInfoAttach of progressInfosAttach" class="mb-2">
-          <span>{{ progressInfoAttach.fileName }}</span>
-          <div class="progress">
-            <div
-              class="progress-bar progress-bar-info progress-bar-striped"
-              role="progressbar"
-              attr.aria-valuenow="{{ progressInfoAttach.value }}"
-              aria-valuemin="0"
-              aria-valuemax="100"
-              [ngStyle]="{ width: progressInfoAttach.value + '%' }"
-            >
-              {{ progressInfoAttach.value }}%
-            </div>
-          </div>
-        </div>
-
-        <div *ngIf="messageAttach.length" class="alert alert-secondary my-3" role="alert">
-          <ul *ngFor="let msgAttach of messageAttach; let i = index">
-            <li>{{ msgAttach }}</li>
-          </ul>
-        </div>
-
-        <div class="card mt-3">
-          <div class="card-header">Danh sách file đính kèm</div>
-          <ul
-            class="list-group list-group-flush"
-            *ngFor="let fileAttach of fileInfosAttach | async"
-          >
-            <li class="list-group-item">
-              <a href="{{ fileAttach.url }}">{{ fileAttach.name }}</a>
-            </li>
-          </ul>
-        </div> -->
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-5">
-      <div class="form-group">
         <div class="label_item">Hợp đồng liên quan</div>
         <div class="col">
           <ng-multiselect-dropdown id="contractConnect" [(ngModel)]="contractConnect" [placeholder]="'-- Chọn --'"
@@ -150,9 +99,16 @@
     <div class="col-md-2"></div>
     <div class="col-md-5">
       <div class="form-group">
-        <div class="label_item">Ngày đến hạn ký</div>
-        <div class="input-group">
-          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker"></ngx-datepicker>
+        <div class="select-file-contract">
+          <div class="file-approve">
+            <div class="label_item">File đính kèm</div>
+            <input id="attachFile" type="file" accept=".pdf, .doc, .docx"
+                  (change)="fileChangedAttach($event)" style="display: none;" multiple/>
+            <div class="select-contract" (click)="addFileAttach()">
+              <input type="text" placeholder="Chọn file đính kèm (PDF, DOC, DOCX)" readonly [ngModel]="this.datas.file_name_attach">
+              <img src="assets/img/attachment.svg" alt="mobifone.contract">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -167,13 +123,25 @@
         </div>
       </div>
     </div>
+    <div class="col-md-2"></div>
+    <div class="col-md-5">
+      <div class="form-group">
+        <div class="label_item">Ngày đến hạn ký</div>
+        <div class="input-group">
+          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker"></ngx-datepicker>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
 <div class="footer-infor-contract">
-  <div></div>
+  <div style="width: 200px;"></div>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
-  <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+  <div>
+    <button type="button" name="next" class="next draft-button">Lưu nháp</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+  </div>
 </div>
 
 
