--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -26,10 +26,19 @@
                   <div class="col-md-6">
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <input type="text" formControlName="name" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userView.get('name')?.errors?.required">
+                      Họ tên không được để trống
+                    </p>
                   </div>
                   <div class="col-md-6">
                     <div class="label_item">Email <span class="require_star">*</span></div>
-                      <input type="text" formControlName="email" class="form-control">
+                    <input type="text" formControlName="email" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userView.get('email')?.errors?.required">
+                      Email không được để trống
+                    </p>
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userView.get('email')?.errors?.email">
+                      Email sai định dạng
+                    </p>
                   </div>
                 </div>
               </div>
@@ -55,10 +64,19 @@
                   <div class="col-md-6">
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <input type="text" formControlName="name" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userSign.get('name')?.errors?.required">
+                      Họ tên không được để trống
+                    </p>
                   </div>
                   <div class="col-md-6">
                     <div class="label_item">Email <span class="require_star">*</span></div>
-                      <input type="text" formControlName="email" class="form-control">
+                    <input type="text" formControlName="email" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userSign.get('email')?.errors?.required">
+                      Email không được để trống
+                    </p>
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userSign.get('email')?.errors?.email">
+                      Email sai định dạng
+                    </p>
                   </div>
                 </div>
                 <div class="row">
@@ -85,6 +103,9 @@
                         </ng-template>
                       </ng-multiselect-dropdown>
                     </div>
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userSign.get('signType')?.errors?.required">
+                      Loại ký không được để trống
+                    </p>
                   </div>
                   <div class="col-md-1">
                     <div class="label_item">OTP</div>
@@ -93,6 +114,9 @@
                   <div class="col-md-5">
                     <div class="label_item">Số điện thoại <span class="require_star">*</span></div>
                     <input type="text" formControlName="phone" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userSign.get('phone')?.errors?.required">
+                      Số điện thoại không được để trống
+                    </p>
                   </div>
                 </div>
               </div>
@@ -118,10 +142,19 @@
                   <div class="col-md-6">
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <input type="text" formControlName="name" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userDoc.get('name')?.errors?.required">
+                      Họ tên không được để trống
+                    </p>
                   </div>
                   <div class="col-md-6">
                     <div class="label_item">Email <span class="require_star">*</span></div>
                     <input type="text" formControlName="email" class="form-control">
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userDoc.get('email')?.errors?.required">
+                      Email không được để trống
+                    </p>
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userDoc.get('email')?.errors?.email">
+                      Email sai định dạng
+                    </p>
                   </div>
                 </div>
                 <div class="row">
@@ -148,6 +181,9 @@
                         </ng-template>
                       </ng-multiselect-dropdown>
                     </div>
+                    <p class="alert alert-danger error-detail" role="alert" *ngIf="userDoc.get('signType')?.errors?.required">
+                      Họ tên không được để trống
+                    </p>
                   </div>
                 </div>
               </div>
